force-app/main/default/objects/Contact/fields/Badges_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Badges_In_Progress__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Badges In Progress</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>