force-app/main/default/objects/Contact/fields/Honorary_Ranger_Bears_Name__c.field-meta.xml
<CustomField>
    <fullName>Honorary_Ranger_Bears_Name__c</fullName>
    <label>Honorary Ranger Bear's Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>