force-app/main/default/objects/Contact/fields/Honorary_Trailhead_Ranger__c.field-meta.xml
<CustomField>
    <fullName>Honorary_Trailhead_Ranger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Honorary Trailhead Ranger</label>
    <type>Checkbox</type>
</CustomField>