force-app/main/default/objects/Contact/fields/Last_TH_Sync_Since_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_TH_Sync_Since_Date__c</fullName>
    <label>Last TH Sync Since Date (Local Time)</label>
    <type>DateTime</type>
</CustomField>