force-app/main/default/objects/Contact/fields/Manager_Notified_Potential_Ranger__c.field-meta.xml
<CustomField>
    <fullName>Manager_Notified_Potential_Ranger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Minimum require Badge Count is stored in Custom Setting "TH Min Ranger Badge Count"</description>
    <inlineHelpText>If not set and a contact has >= min required badge count,  notify their manager they are a potential ranger.  Notifications need the notify Manager setting to be TRUE and a Manager being recorded on the Contact record. No post made if Honorary Ranger=TRUE</inlineHelpText>
    <label>Manager Notified - Potential Ranger</label>
    <type>Checkbox</type>
</CustomField>