force-app/main/default/objects/Contact/fields/Monitor_Trailhead_Badges__c.field-meta.xml
<CustomField>
    <fullName>Monitor_Trailhead_Badges__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this box in order to sync badges from Trailhead
The first time you check the box and save the record it will sync all Trailhead badges for this user
If you uncheck the box it will delete all the related Trailhead badge records</description>
    <inlineHelpText>Check this box in order to sync badges from Trailhead
The first time you check the box and save the record it will sync all Trailhead badges for this user
If you uncheck the box it will delete all the related Trailhead badge records</inlineHelpText>
    <label>Monitor Trailhead Badges</label>
    <type>Checkbox</type>
</CustomField>