force-app/main/default/objects/Contact/fields/Notify_Mgr_if_Ranger_Badge_Count_Met__c.field-meta.xml
<CustomField>
    <fullName>Notify_Mgr_if_Ranger_Badge_Count_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Validation on this field required the manager field to be populated first.  
Minimum Badge Count is based on formula field Potential_Ranger__c being set to true.  If the limit changes from the current value of 85, then the formula will need to be updated.  The process will only @mention the manager if the manager is a user of the org and the checkbox Honorary_Trailhead_Ranger__c is not already true.  This should handle the case where the 85 badge limit is increased beyond a point where existing rangers are in terms of badge counts</description>
    <inlineHelpText>If this person crosses the badge threshold required to become an Honorary Trailhead Ranger, then @mention their manager.</inlineHelpText>
    <label>Notify Mgr if Ranger Badge Count Met</label>
    <type>Checkbox</type>
</CustomField>