force-app/main/default/objects/Contact/fields/Peer_Assessments_Completed__c.field-meta.xml
<CustomField>
    <fullName>Peer_Assessments_Completed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total number of Peer Assessment Badges that have been completed by this contact.</description>
    <inlineHelpText>The total number of Peer Assessment Badges that have been completed by this contact.</inlineHelpText>
    <label>Peer Assessments Completed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>