force-app/main/default/objects/Contact/fields/Projects_Completed__c.field-meta.xml
<CustomField>
    <fullName>Projects_Completed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Projects Completed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>