force-app/main/default/objects/Contact/fields/Public_Profile_Page__c.field-meta.xml
<CustomField>
    <fullName>Public_Profile_Page__c</fullName>
    <label>Public Profile Page</label>
    <type>Url</type>
</CustomField>