force-app/main/default/objects/Contact/fields/Reporting_Group__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Group__c</fullName>
    <label>Reporting Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANZ HT</fullName>
            </value>
            <value>
                <fullName>Howard Paster</fullName>
            </value>
            <value>
                <fullName>Jean-Luc</fullName>
            </value>
            <value>
                <fullName>Vijay Swamidass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>