force-app/main/default/objects/Contact/fields/SFDCID__c.field-meta.xml
<CustomField>
    <fullName>SFDCID__c</fullName>
    <label>SFDCID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>