force-app/main/default/objects/Contact/fields/Total_Badge_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Badge_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Badge Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>