force-app/main/default/objects/Contact/fields/Trailhead_Points__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Points__c</fullName>
    <inlineHelpText>Populated automatically from the Trailhead org</inlineHelpText>
    <label>Trailhead Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>