force-app/main/default/objects/Contact/fields/Trailhead_Rank__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Rank__c</fullName>
    <inlineHelpText>Populated from the Trailhead org</inlineHelpText>
    <label>Trailhead Rank</label>
    <length>60</length>
    <type>Text</type>
</CustomField>