force-app/main/default/objects/Contact/fields/TrailheadID__c.field-meta.xml
<CustomField>
    <fullName>TrailheadID__c</fullName>
    <description>The Contact ID stored in Trailhead for this User ID.  Only stored for reference as Email address is the primary key used to look up records in Trailhead</description>
    <label>TrailheadID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>