force-app/main/default/objects/Contact/fields/UserID__c.field-meta.xml
<CustomField>
    <fullName>UserID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Required to allow manager notifications when a staff member gets enough badges to be a potential ranger</description>
    <inlineHelpText>Required on the manager's contact record to allow the manager to receive notifications when a staff member gets enough badges to be a potential ranger
Used with Notify Mgr if Ranger Badge Count Met</inlineHelpText>
    <label>Trailhead Org UserID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>