force-app/main/default/objects/Contact/validationRules/Manager_Mandatory_if_HTR_Notify_checked.validationRule-meta.xml
<ValidationRule>
    <fullName>Manager_Mandatory_if_HTR_Notify_checked</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(ReportsTo.Id) 
&amp;&amp;
Notify_Mgr_if_Ranger_Badge_Count_Met__c = TRUE</errorConditionFormula>
    <errorDisplayField>ReportsToId</errorDisplayField>
    <errorMessage>Get real dude: How can I tell their manager the good news if I don't know who the potential Trailhead Ranger's manager is!
Manager also has to be a user in this org. Llink the manager's user record to their contact record via Trailhead Org UserID field</errorMessage>
</ValidationRule>