force-app/main/default/objects/Contact/listViews/Trailhed_Syninc_Contacts.listView-meta.xml
<ListView>
    <fullName>Trailhed_Syninc_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Last_TH_Sync_Since_Date__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Monitor_Trailhead_Badges__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Trailhed Sync Contacts</label>
    <language>en_US</language>
</ListView>