force-app/main/default/objects/Contact/listViews/VPContacts.listView-meta.xml
<ListView>
    <fullName>VPContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.DEPARTMENT</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>startsWith</operation>
        <value>Vice,VP</value>
    </filters>
    <label>VP-Level Contacts</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
        <allPartnerUsers/>
    </sharedTo>
</ListView>